--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <!-- Site Properities -->
-    <title>A Life's Journey</title>
+    <title>I'm Ivo Tavares.</title>
     <!--meta name="twitter:image" content=""-->
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
@@ -15,12 +15,74 @@
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
   </div>
-<div class="hero-image">
-  <div class="hero-text">
-      <h1 style="font-size:50px">A Life's Journey</h1>
-      <p>The stories and thoughts of a ML Engineer</p>
+  <div class="hero-image">
+    <div class="hero-text">
+        <h1 style="font-size:50px">Ivo Tavares</h1>
+        <p>An ML Engineer</p>
+    </div>
+  </div>
+  <div class="container" style="background-color: #E3D49F">
+    <!-- #CAC9AD  #A9C8F4  #96998E  #E6E2BF  #EED787-->
+    <div class="row"  height="90">
+      <div class="column-bio-text">
+        <h1 class="xlarge-font"style="color:#D9AB87;"><b>Ivo Tavares</b></h1>
+        <h1 class="large-font" style="color:#6F9BDA;"><b>ML Engineer</b></h1>
+        <p><span style="font-size:36px;color:#E69C34;">Deeply driven.</span> Skilled in building and handling models and data pipelines.
+Experience in using Python for NLP and Time Series forecasting tasks, in a machine learning context.
+Experience in service integration and API building.</p>
+        <button class="button">See CV</button>
+      </div>
+      <div class="column-bio-pic">
+          <img src="static/images/itavares.jpg" width="335" height="471">
+      </div>
+    </div>
+  </div>
+  <div class="container" style="background-color: #E3D49F">
+    <h3 class="w3-padding-16">My Interests</h3>
+    <p class="w3-wide">Photography</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+    </div>
+    <p class="w3-wide">Web Design</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+    </div>
+    <p class="w3-wide">Photoshop</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
+    </div>
+    <br>
+  </div>
+  <!-- Clarity Section -->
+<div class="container" style="background-color:#f1f1f1">
+  <div class="row">
+    <div class="column-33">
+      <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
+    </div>
+    <div class="column-66">
+      <h1 class="xlarge-font"><b>Clarity</b></h1>
+      <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
+      <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <button class="button" style="background-color:red">Read More</button>
+    </div>
   </div>
 </div>
+
+<!-- The App Section -->
+<div class="container">
+  <div class="row">
+    <div class="column-66">
+      <h1 class="xlarge-font"><b>The App</b></h1>
+      <h1 class="large-font" style="color:#D5D1C8;"><b>Why buy it?</b></h1>
+      <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <button class="button">Download Application</button>
+    </div>
+    <div class="column-33">
+        <img src="/w3images/img_app.jpg" width="335" height="471" >
+    </div>
+  </div>
+</div>
+
 
 
 </body></html>
