Front page almost finished. Something wrong with skills section.

--- a/main.html
+++ b/main.html
@@ -21,15 +21,15 @@
         <p>An ML Engineer</p>
     </div>
   </div>
-  <div class="container" style="background-color: #E3D49F">
+  <div class="container" style="background-color: lightgoldenrodyellow">
     <!-- #CAC9AD  #A9C8F4  #96998E  #E6E2BF  #EED787-->
     <div class="row"  height="90">
       <div class="column-bio-text">
-        <h1 class="xlarge-font"style="color:#D9AB87;"><b>Ivo Tavares</b></h1>
-        <h1 class="large-font" style="color:#6F9BDA;"><b>ML Engineer</b></h1>
-        <p><span style="font-size:36px;color:#E69C34;">Deeply driven.</span> Skilled in building and handling models and data pipelines.
-Experience in using Python for NLP and Time Series forecasting tasks, in a machine learning context.
-Experience in service integration and API building.</p>
+        <h1 class="xlarge-font" style="color:#85b1f0;"><b>Ivo Tavares</b></h1>
+        <h1 class="large-font" style="color:#fbfbfb;"><b>ML Engineer</b></h1>
+        <p><span style="font-size:36px;color:#E69C34;">Deeply driven.</span> Skilled in building and maintaining models and data pipelines.
+          Experience in using Python for NLP and Time Series forecasting tasks, in a machine learning context.
+          Experience in service integration and API building.</p>
         <button class="button">See CV</button>
       </div>
       <div class="column-bio-pic">
@@ -37,52 +37,42 @@ Experience in service integration and API building.</p>
       </div>
     </div>
   </div>
-  <div class="container" style="background-color: #E3D49F">
-    <h3 class="w3-padding-16">My Interests</h3>
-    <p class="w3-wide">Photography</p>
+  <!-- Contact Section -->
+  <div class="container-interests" style="background-color: lightgoldenrodyellow">
+    <h3 class="large-font" style="color:#85b1f0;">Interests</h3>
+    <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
     </div>
-    <p class="w3-wide">Web Design</p>
+    <p class="w3-wide" style="color:#E69C34;">Time Series</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:85%"></div>
     </div>
-    <p class="w3-wide">Photoshop</p>
+    <p class="w3-wide" style="color:#E69C34;">App Development</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+    </div>
+    <p class="w3-wide" style="color:#E69C34;">MLOps</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:50%"></div>
     </div>
     <br>
   </div>
-  <!-- Clarity Section -->
-<div class="container" style="background-color:#f1f1f1">
-  <div class="row">
-    <div class="column-33">
-      <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
-    </div>
-    <div class="column-66">
-      <h1 class="xlarge-font"><b>Clarity</b></h1>
-      <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
-      <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      <button class="button" style="background-color:red">Read More</button>
-    </div>
-  </div>
-</div>
 
-<!-- The App Section -->
-<div class="container">
-  <div class="row">
-    <div class="column-66">
-      <h1 class="xlarge-font"><b>The App</b></h1>
-      <h1 class="large-font" style="color:#D5D1C8;"><b>Why buy it?</b></h1>
-      <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      <button class="button">Download Application</button>
-    </div>
-    <div class="column-33">
-        <img src="/w3images/img_app.jpg" width="335" height="471" >
+<!-- Contact Section -->
+  <div class="container" style="background-color: lightgoldenrodyellow">
+    <div class="row">
+      <div class="column-66">
+        <div class="column-33">
+          <h1 class="xlarge-font" style="color: rgb(255, 255, 255);"><b>Contact me</b></h1>
+          <!-- <h1 class="large-font" style="color:#D5D1C8;"><b>Why buy it?</b></h1> -->
+          <p style="font-size:36px">
+            <a class="href" href="https://linkedin.com/in/ivo-tavares-76781b1b9">LinkedIn</a>
+          </p> 
+          <p style="font-size:36px">
+            <a class="href" href="mailto:ivo.a.v.tavares@gmail.com">Mail</a>
+          </p> 
+        </div>
     </div>
   </div>
-</div>
-
-
-
 </body></html>
