comments and experiment with main.css

--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
         <p>An ML Engineer</p>
     </div>
   </div>
+    <!-- Short Presentation Section -->
   <div class="container" style="background-color: lightgoldenrodyellow">
     <!-- #CAC9AD  #A9C8F4  #96998E  #E6E2BF  #EED787-->
     <div class="row"  height="90">
@@ -37,7 +38,7 @@
       </div>
     </div>
   </div>
-  <!-- Contact Section -->
+  <!-- Interests Section -->
   <div class="container-interests" style="background-color: lightgoldenrodyellow">
     <h3 class="large-font" style="color:#85b1f0;">Interests</h3>
     <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
@@ -56,7 +57,7 @@
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:50%"></div>
     </div>
-    <br>
+    <br></br>
   </div>
 
 <!-- Contact Section -->
