--- a/main.html
+++ b/main.html
@@ -41,21 +41,23 @@
   <!-- Interests Section -->
   <div class="container-interests" style="background-color: lightgoldenrodyellow">
     <h3 class="large-font" style="color:#85b1f0;">Interests</h3>
-    <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide" style="color:#E69C34;">Time Series</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide" style="color:#E69C34;">App Development</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
-    </div>
-    <p class="w3-wide" style="color:#E69C34;">MLOps</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:50%"></div>
+    <div class="grid-container">
+      <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+      </div>
+      <p class="w3-wide" style="color:#E69C34;">Time Series</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+      </div>
+      <p class="w3-wide" style="color:#E69C34;">App Development</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+      </div>
+      <p class="w3-wide" style="color:#E69C34;">MLOps</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:50%"></div>
+      </div>
     </div>
     <br></br>
   </div>
