renamed main to index.html

--- a/my_projects.html
+++ b/my_projects.html
@@ -6,7 +6,7 @@
     </head>
 <body>
   <div class="topnav">
-    <a href="main.html">Home</a>
+    <a href="index.html">Home</a>
     <a class="active" href="my_projects.html">My Projects</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
