Fixed about and contact buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
     <!-- Short Presentation Section -->
-  <div class="container" style="background-color: lightgoldenrodyellow">
+  <div id="about" class="container" style="background-color: lightgoldenrodyellow">
     <!-- #CAC9AD  #A9C8F4  #96998E  #E6E2BF  #EED787-->
     <div class="row"  height="90">
       <div class="column-bio-text">
@@ -63,7 +63,7 @@
   </div>
 
 <!-- Contact Section -->
-  <div class="container" style="background-color: lightgoldenrodyellow">
+  <div id="contact" class="container" style="background-color: lightgoldenrodyellow">
     <div class="row">
       <div class="column-66">
         <div class="column-33">
