added link to cv

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <p><span style="font-size:36px;color:#E69C34;">Deeply driven.</span> Skilled in building and maintaining models and data pipelines.
           Experience in using Python for NLP and Time Series forecasting tasks, in a machine learning context.
           Experience in service integration and API building.</p>
-        <button class="button">See CV</button>
+        <button class="button">
+          <a href="cv/CV_Ivo_Tavares_18_09.pdf">See CV</a>
+        </button>
         <div class="column-bio-pic">
           <img src="static/images/itavares.jpg" width="335" height="471">
         </div>
