added title css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <!-- Interests Section -->
   <div class="container-interests" style="background-color: lightgoldenrodyellow">
-    <h3 class="large-font" style="color:#85b1f0;">Interests</h3>
+    <div class="title" style="color:#85b1f0;">Interests</div>
     <div class="grid-container">
       <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
       <div class="w3-white">
