fixed responsiveness for bio-pic.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="cv/CV_Ivo_Tavares_18_09.pdf">See CV</a>
         </button>
         <div class="column-bio-pic">
-          <img src="static/images/itavares.jpg" width="335" height="471">
+          <img src="static/images/itavares.jpg">
         </div>
       </div>
       
