--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <!-- Site Properities -->
-    <title>I'm Ivo Tavares.</title>
-    <!--meta name="twitter:image" content=""-->
-    <link rel="stylesheet" type="text/css" href="static/css/main.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="static/css/main.css">
+  </head>
 <body>
-  <div class="topnav">
+  <div id= "myTopnav" class="topnav">
     <a class="active" href="">Home</a>
     <a href="my_projects.html">My Projects</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
   <div class="hero-image">
     <div class="hero-text">
@@ -81,4 +82,16 @@
         </div>
     </div>
   </div>
-</body></html>
+
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " "+"responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+  </script>
+</body>
+</html>
