improved interests section.

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
   <div class="container-interests" style="background-color: lightgoldenrodyellow">
     <h3 class="large-font" style="color:#85b1f0; text-align: center;">Interests</h3>
     <div class="grid-container">
-      <p class="w3-wide" style="color:#E69C34;">Natural Language Processing</p>
+      <p class="w3-wide grid-text">Natural Language Processing</p>
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:95%"></div>
       </div>
-      <p class="w3-wide" style="color:#E69C34;">Time Series</p>
+      <p class="w3-wide grid-text">Time Series</p>
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:85%"></div>
       </div>
-      <p class="w3-wide" style="color:#E69C34;">App Development</p>
+      <p class="w3-wide grid-text">App Development</p>
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:70%"></div>
       </div>
-      <p class="w3-wide" style="color:#E69C34;">MLOps</p>
+      <p class="w3-wide grid-text">MLOps</p>
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:50%"></div>
       </div>
