my projects page is able to redirect correctly.

--- a/my_projects.html
+++ b/my_projects.html
@@ -3,16 +3,21 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="static/css/my_projects.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script type="text/javascript" src="js/my_projects/scripts.js"></script>
     </head>
 <body>
   <div class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="my_projects.html">My Projects</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="index.html#contact">Contact</a>
+    <a href="index.html#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
   <br>
-  <p>These are some of my GitHub projects publicaly available.</p>
+  <p>Some of my public GitHub projects.</p>
   <br>
 
   <div class="row">
@@ -21,9 +26,12 @@
         <img src="static/images/time_series.jpg" alt="Time Series" style="width:100%">
         <div class="container">
           <h2>Time Series</h2>
-          <p class="title">CEO & Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p class="title">Time_Series</p>
+          <p>
+            This is a repo containing a simple library for Time Series data problems, 
+            which tries to aggregate all steps of the analysis, from data preprocessing, 
+            to label/target prediction performance assessment, and graphical presentation.
+          </p>
           <p><button class="button" onclick="open_time_series()" id="TimeSeries">Visit Project</button>
             <script>
               function open_time_series(){
