top nav filler function is working.

--- a/my_projects.html
+++ b/my_projects.html
@@ -7,12 +7,12 @@
       <script type="text/javascript" src="js/my_projects/scripts.js"></script>
     </head>
 <body>
-  <div class="topnav">
+  <div id = "myTopnav" class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="my_projects.html">My Projects</a>
     <a href="index.html#contact">Contact</a>
     <a href="index.html#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="top_nav_fill()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
