--- a/my_projects.html
+++ b/my_projects.html
@@ -17,54 +17,61 @@
     </a>
   </div>
   <br>
-  <p>Some of my public GitHub projects.</p>
+  <p class = "title-dark-background">Some of my public GitHub projects.</p>
   <br>
 
   <div class="row">
     <div class="column">
-      <div class="card">
+      <div class="card dark-background">
         <img src="static/images/time_series.jpg" alt="Time Series" style="width:100%">
         <div class="container">
           <h2>Time Series</h2>
           <p class="title">Time_Series</p>
           <p>
-            This is a repo containing a simple library for Time Series data problems, 
+            This is repo contains a simple library for Time Series data problems, 
             which tries to aggregate all steps of the analysis, from data preprocessing, 
             to label/target prediction performance assessment, and graphical presentation.
           </p>
-          <p><button class="button" onclick="open_time_series()" id="TimeSeries">Visit Project</button>
-            <script>
-              function open_time_series(){
-                window.open("https://github.com/ialvata/Time_Series");
-              }
-            </script>
+          <p>
+            <button class="button" onclick="open_time_series()" id="TimeSeries">
+              Visit Project
+            </button>
           </p>
         </div>
       </div>
     </div>
 
     <div class="column">
-      <div class="card">
-        <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <div class="card dark-background">
+        <img src="static/images/NLP-image.jpg" alt="NLP" style="width:100%">
         <div class="container">
-          <h2>Mike Ross</h2>
-          <p class="title">Art Director</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
-          <p><button class="button">Contact</button></p>
+          <h2>Natural Language Processing</h2>
+          <p class="title">NLP</p>
+          <p>
+            This repo contains various notebooks and scripts with several NLP tasks, 
+            from ECB speach classification, to review summarisation and information extraction.
+          </p>
+          <p>
+            <button class="button" onclick="open_nlp()" id="NLP">
+              Visit Repo
+            </button>
+          </p>
         </div>
       </div>
     </div>
 
     <div class="column">
-      <div class="card">
-        <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <div class="card dark-background">
+        <img src="/w3images/team3.jpg" alt="AppDev" style="width:100%">
         <div class="container">
-          <h2>John Doe</h2>
-          <p class="title">Designer</p>
+          <h2>AppDev</h2>
+          <p class="title">Application/API Development</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
-          <p><button class="button">Contact</button></p>
+          <p>
+            <button class="button" onclick="open_app_dev()" id="AppDev">
+              Visit Repo
+            </button>
+          </p>
         </div>
       </div>
     </div>
