updated api dev project card.

--- a/my_projects.html
+++ b/my_projects.html
@@ -62,13 +62,17 @@
 
     <div class="column">
       <div class="card dark-background">
-        <img src="/w3images/team3.jpg" alt="AppDev" style="width:100%">
+        <img src="static/images/python_api_dev.png" alt="APIDev" style="width:100%">
         <div class="container">
           <h2>AppDev</h2>
-          <p class="title">Application/API Development</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p class="title">API Development</p>
           <p>
-            <button class="button" onclick="open_app_dev()" id="AppDev">
+            An interpretation of the Python API Development course from Sanjeev Thiyagarajan.
+            I have added several extra integrations (Grafana, Prometheus, etc), and some 
+            pre-commit hooks (black, isort, Flake8).
+          </p>
+          <p>
+            <button class="button" onclick="open_api_dev()" id="APIDev">
               Visit Repo
             </button>
           </p>
