--- a/my_projects.html
+++ b/my_projects.html
@@ -64,7 +64,7 @@
       <div class="card dark-background">
         <img src="static/images/python_api_dev.png" alt="APIDev" style="width:100%">
         <div class="container">
-          <h2>AppDev</h2>
+          <h2>APIDev</h2>
           <p class="title">API Development</p>
           <p>
             An interpretation of the Python API Development course from Sanjeev Thiyagarajan.
