fixed typo in APIDev button.

--- a/my_projects.html
+++ b/my_projects.html
@@ -73,7 +73,7 @@
           </p>
           <p>
             <button class="button" onclick="open_api_dev()" id="APIDev">
-              Visit Repo
+              Visit Project
             </button>
           </p>
         </div>
