changed App to API. Fixed link import lack of indentation.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <!-- Site Properities -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="static/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" type="text/css" href="static/css/main.css">
   </head>
 <body>
   <div id= "myTopnav" class="topnav">
@@ -54,7 +55,7 @@
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:85%"></div>
       </div>
-      <p class="w3-wide grid-text">App Development</p>
+      <p class="w3-wide grid-text">API Development</p>
       <div class="w3-orange">
         <div class="w3-dark-orange" style="height:28px;width:70%"></div>
       </div>
