Updated look on my_projects page.

--- a/my_projects.html
+++ b/my_projects.html
@@ -17,16 +17,16 @@
     </a>
   </div>
   <br>
-  <p class = "title-dark-background">Some of my public GitHub projects.</p>
   <br>
-
+  <br>
+  <br>
   <div class="row">
     <div class="column">
       <div class="card dark-background">
         <img src="static/images/time_series.jpg" alt="Time Series" style="width:100%">
         <div class="container">
           <h2>Time Series</h2>
-          <p class="title">Time_Series</p>
+          <p class="title">In Progress</p>
           <p>
             This is repo contains a simple library for Time Series data problems, 
             which tries to aggregate all steps of the analysis, from data preprocessing, 
@@ -46,7 +46,7 @@
         <img src="static/images/NLP-image.jpg" alt="NLP" style="width:100%">
         <div class="container">
           <h2>Natural Language Processing</h2>
-          <p class="title">NLP</p>
+          <p class="title">In Progress</p>
           <p>
             This repo contains various notebooks and scripts with several NLP tasks, 
             from ECB speach classification, to review summarisation and information extraction.
@@ -64,8 +64,8 @@
       <div class="card dark-background">
         <img src="static/images/python_api_dev.png" alt="APIDev" style="width:100%">
         <div class="container">
-          <h2>APIDev</h2>
-          <p class="title">API Development</p>
+          <h2>API Development</h2>
+          <p class="title">In Progress</p>
           <p>
             An interpretation of the Python API Development course from Sanjeev Thiyagarajan.
             I have added several extra integrations (Grafana, Prometheus, etc), and some 
