--- a/my_projects.html
+++ b/my_projects.html
@@ -19,23 +19,22 @@
   <br>
   <br>
   <br>
-  <br>
-  <h1 class="title">Projects</h1>
+  <h1 class="title">(Under Construction)</h1>
   <hr>
   <br>
   <div id="myBtnContainer">
-    <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-    <button class="btn" onclick="filterSelection('nlp')"> NLP</button>
-    <button class="btn" onclick="filterSelection('time_series')"> Time Series</button>
-    <button class="btn" onclick="filterSelection('mlops')"> MLOps</button>
-    <button class="btn" onclick="filterSelection('app_dev')"> AppDev</button>
+    <button class="button_gallery button_gallery_active" onclick="filterSelection('all')"> Show all</button>
+    <button class="button_gallery" onclick="filterSelection('nlp')"> NLP</button>
+    <button class="button_gallery" onclick="filterSelection('time_series')"> Time Series</button>
+    <button class="button_gallery" onclick="filterSelection('mlops')"> MLOps</button>
+    <button class="button_gallery" onclick="filterSelection('app_dev')"> AppDev</button>
   </div>
   <!-- Portfolio Gallery Grid -->
   <div class="row">
     <div class="column time_series">
-      <div class="card dark-background">
-        <img src="static/images/time_series.jpg" alt="Time Series" style="width:100%">
-        <div class="container">
+      <div class="card">
+        <img class="card_image" src="static/images/time_series.jpg" alt="Time Series">
+        <!-- <div class="container"> -->
           <h2>Time Series</h2>
           <p class="title">Paused</p>
           <p>
@@ -48,14 +47,14 @@
               Visit Project
             </button>
           </p>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
     <div class="column nlp">
-      <div class="card dark-background">
-        <img src="static/images/NLP-image.jpg" alt="NLP" style="width:100%">
-        <div class="container">
+      <div class="card ">
+        <img class="card_image" src="static/images/NLP-image.jpg" alt="NLP">
+        <!-- <div class="container"> -->
           <h2>Natural Language Processing</h2>
           <p class="title">In Progress</p>
           <p>
@@ -67,14 +66,14 @@
               Visit Repo
             </button>
           </p>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
     <div class="column app_dev">
-      <div class="card dark-background">
-        <img src="static/images/python_api_dev.png" alt="APIDev" style="width:100%">
-        <div class="container">
+      <div class="card ">
+        <img class="card_image" src="static/images/python_api_dev.png" alt="APIDev">
+        <!-- <div class="container"> -->
           <h2>API Development</h2>
           <p class="title">Paused</p>
           <p>
@@ -87,8 +86,28 @@
               Visit Project
             </button>
           </p>
-        </div>
+        <!-- </div> -->
       </div>
+    </div>
+  </div>
+
+  <div class="column mlops">
+    <div class="card ">
+      <img class="card_image" src="static/images/mlflow.jpg" alt="MLOps">
+      <!-- <div class="container"> -->
+        <h2>MLflow Exploration</h2>
+        <p class="title">In Progress</p>
+        <p>
+          This repo contains various notebooks and scripts where I experiment with MLflow regarding
+          experiment tracking, model evaluation, and registry, while using a docker container 
+          emulating MLflow server.
+        </p>
+        <p>
+          <button class="button" onclick="open_mlflow_exploration()" id="NLP">
+            Visit Repo
+          </button>
+        </p>
+      <!-- </div> -->
     </div>
   </div>
 
