added podcast_project card.

--- a/my_projects.html
+++ b/my_projects.html
@@ -19,7 +19,7 @@
   <br>
   <br>
   <br>
-  <h1 class="title">(Under Construction)</h1>
+  <h1 class="title">My Projects</h1>
   <hr>
   <br>
   <div id="myBtnContainer">
@@ -66,9 +66,30 @@
               Visit Repo
             </button>
           </p>
+      </div>
+    </div>
+
+    <div class="column app_dev nlp">
+      <div class="card ">
+        <img class="card_image" src="static/images/podcast_project.png" alt="Podcast Project">
+        <!-- <div class="container"> -->
+          <h2>Podcast Project</h2>
+          <p class="title">In Progress</p>
+          <p>
+            This Full Stack project focuses on Natural Language Processing (NLP) tasks, 
+            including Speech to Text tasks. The frontend utilizes JavaScript, HTML, and CSS, 
+            while the backend is powered by Python (FastAPI) and incorporates databases 
+            such as MongoDB and PostgreSQL.
+          </p>
+          <p>
+            <button class="button" onclick="open_podcast_project()" id="podcast_project">
+              Visit Project
+            </button>
+          </p>
         <!-- </div> -->
       </div>
     </div>
+  </div>
 
     <div class="column app_dev">
       <div class="card ">
