--- a/my_projects.html
+++ b/my_projects.html
@@ -115,6 +115,20 @@
             </button>
           </p>
     </div>
+
+    <div class="column nlp app_dev">
+      <img class="card_image" src="static/images/llms.jpg" alt="Time Series">
+        <h2>Large Language Models</h2>
+        <p class="title">In Progress</p>
+        <p>
+          This is repo contains some apps built with LLMs and vector databases.
+        </p>
+        <p>
+          <button class="button" onclick="open_llms()" id="TimeSeries">
+            Visit Project
+          </button>
+        </p>
+    </div>
   </div>
 </body>
 </html>
